--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -14,6 +14,11 @@
         <members>addToList</members>
         <members>bandInfo</members>
         <members>hiddenInput</members>
+        <members>mainPageHolder</members>
         <name>LightningComponentBundle</name>
+    </types>
+    <types>
+        <members>Logo</members>
+        <name>StaticResource</name>
     </types>
 </Package>
